# PathSensitiveDataAnalysis

./: .gitignore  CMakeLists.txt  README.md  test.cpp
configs/: PathSensitiveAnalysis.h.in
demos/: README.md
demos/CFGSplitGraph/: Makefile  README.md  cfg01_before_modify.ll  cfg01_modified.ll
demos/CFGSplitGraph/02/: Makefile  cfg.foo.dot  cfg02_modified.ll
demos/final/: Makefile  demo01  demo01.ll  demo03.ll  test.ll
demos/final/time-measure/: Makefile  demo01  demo01.bc  demo02  demo02.bc  demo02.ll  demo03  demo03.bc  measurements.sh  modified_demo01  modified_demo01.bc  modified_demo01.ll  modified_demo02  modified_demo02.bc  modified_demo02.ll  modified_demo03  modified_demo03.bc  modified_demo03.ll  sccp_demo01.ll  sccp_demo02.ll  sccp_demo03.ll  sccp_modified_demo01.ll  sccp_modified_demo02.ll  sccp_modified_demo03.ll  test.cc
dependencies/: SCCP.hpp
src/: Temp.cpp  modifyCFGTest.cpp  pathSensitiveAnalysis.cpp
tests/: cprop.ll  nonssa_cprop.ll
tools/toyExampleGenerator/: Makefile  cfg.foo.dot  cfg_modify.cpp  cfg_modify.ll  cprop.cpp  demo03.cpp  nonssa_cfg_modify.ll  nonssa_demo03.ll  simplest.cpp
utils/: CFGModifier.hpp  Utils.hpp
